--- a/index.html
+++ b/index.html
@@ -259,29 +259,25 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 loadMap();
   </script>
 
-<audio id="bg-music" loop autoplay>
-  <source src="Lofi1.m4a" type="audio/mp4">
+<audio id="bg-music" autoplay loop>
+  <source src="Lofi_1.wav" type="audio/wav">
   Your browser does not support the audio element.
 </audio>
-<button id="music-toggle">🔊</button>
+
+<button id="music-toggle" style="position:absolute;bottom:10px;right:10px;z-index:999;padding:6px 12px;border:none;border-radius:4px;background:#222;color:#fff;cursor:pointer;">
+  🔊
+</button>
+
 <script>
-  const audio = document.getElementById("bg-music");
-  const toggle = document.getElementById("music-toggle");
-  toggle.style.position = 'absolute';
-  toggle.style.bottom = '10px';
-  toggle.style.right = '10px';
-  toggle.style.zIndex = 1001;
-  toggle.style.background = 'white';
-  toggle.style.border = '1px solid black';
-  toggle.style.borderRadius = '4px';
-  toggle.style.padding = '4px 8px';
+  const music = document.getElementById('bg-music');
+  const toggle = document.getElementById('music-toggle');
 
   toggle.onclick = () => {
-    if (audio.paused) {
-      audio.play();
+    if (music.paused) {
+      music.play();
       toggle.textContent = '🔊';
     } else {
-      audio.pause();
+      music.pause();
       toggle.textContent = '🔇';
     }
   };
