--- a/index.html
+++ b/index.html
@@ -260,9 +260,11 @@ loadMap();
   </script>
 
 <audio id="bg-music" autoplay loop>
+  <source src="Lofi_1.ogg" type="audio/ogg">
   <source src="Lofi_1.wav" type="audio/wav">
   Your browser does not support the audio element.
 </audio>
+
 
 <button id="music-toggle" style="position:absolute;bottom:10px;right:10px;z-index:999;padding:6px 12px;border:none;border-radius:4px;background:#222;color:#fff;cursor:pointer;">
   🔊
