--- a/index.html
+++ b/index.html
@@ -182,6 +182,32 @@ function suffixOnlyMismatch(guess, actual) {
   return sameBase && diffSuffix;
 }
 
+
+// Seamless background music using Web Audio API
+let audioContext = new (window.AudioContext || window.webkitAudioContext)();
+let sourceNode;
+
+async function playLoopingMusic() {
+  const response = await fetch('Lofi_1.ogg');
+  const arrayBuffer = await response.arrayBuffer();
+  const audioBuffer = await audioContext.decodeAudioData(arrayBuffer);
+
+  sourceNode = audioContext.createBufferSource();
+  sourceNode.buffer = audioBuffer;
+  sourceNode.loop = true;
+  sourceNode.connect(audioContext.destination);
+  sourceNode.start(0);
+}
+
+window.addEventListener('click', () => {
+  if (audioContext.state === 'suspended') {
+    audioContext.resume();
+  }
+  if (!sourceNode) {
+    playLoopingMusic();
+  }
+}, { once: true });
+
 async function loadMap() {
   await checkLogin();
 
